<resources>
    <string name="app_name">FlickrSimpleOrganizr</string>
    <string name="login_label">Login</string>
    <string name="login_oauth_setting_missing_err_msg">Specify OAuth App Setting (Key and Secret)</string>
    <string name="login_verify_key_label">Enter verifier code</string>
    <string name="login_verify_key_hint">XXX-XXX-XXX</string>
    <string name="login_verify_key_err_msg">Wrong verifier code</string>
    <string name="login_verify_ok">Verify</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_account">Account</string>
    <string name="pref_category_account_oauth_app">OAuth App</string>
    <string name="pref_title_account_oauth_api_key">Key</string>
    <string name="pref_title_account_oauth_shared_secret">Secret</string>
    <string name="pref_title_account_logout">Logout</string>

    <!-- Strings related to Settings -->

    <string name="test_access_error">Test Access Error</string>
    <string name="photo_add_tags">Add Tags</string>
    <string name="photo_add_tags_tags_to_add">Tags to Add</string>
    <string name="photo_add_tags_failed_msg">Failed to add tags</string>
    <string name="photo_add_tags_success_msg">Successfully completed</string>
    <string name="edit_dates">Edit dates</string>
    <string name="photo_posted">Date posted</string>
    <string name="date_taken">Date Taken</string>
    <string name="edit_dates_change_dates">Change Dates</string>
    <string name="change_dates_failed_msg">Failed to change dates</string>
    <string name="change_dates_success_msg">Successfully completed</string>
    <string name="date_taken_granularity">Granularity of date token</string>
    <string-array name="date_taken_granularity_values">
        <item>Y-m-d H:i:s</item>
        <item>Y-m</item>
        <item>Y</item>
        <item>Circa…</item>
    </string-array>
    <string name="photo_set_license_info">Set License Info</string>
    <string name="photo_set_license_failed_msg">Failed to change license</string>
    <string name="photo_set_license_success_msg">Successfully completed</string>
    <string name="photo_open_url">Open URL</string>

</resources>
